--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
-    <div class="grid-container"></div>
-    <footer></footer>
+    <header>
+
+    </header>
+    <button id="clear">
+        Clear
+    </button>
+    <div id="grid-container">
+    </div>
+    <footer>
+
+    </footer>
     <script  src='script.js' defer></script>
 </body>
 </html>
