--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 </head>
 <body>
     <header>
-
+        <h1>Etch a Sketch</h1>
     </header>
-    <button id="clear">
-        Clear
-    </button>
-    <div id="grid-container">
+    <div id="container">
+        <div id="left-container">
+            <button class="left-button" id="blue">blue</button>
+            <button class="left-button" id="rgb">rgb</button>
+            <button class="left-button" id="black">light-black</button>
+        </div>
+        <div id="middle-container">
+            <button id="clear">Clear</button>
+            <div id="grid-container"></div>
+        </div>
+        <div id="right-container"></div>
     </div>
     <footer>
-
+        <p>The Odin Project</p>
+        <p id="name">by Tiyo</p>
     </footer>
     <script  src='script.js' defer></script>
 </body>
