Changed button properties

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     </header>
     <div id="container">
         <div id="left-container">
-            <button class="left-button" id="blue">blue</button>
-            <button class="left-button" id="rgb">rgb</button>
-            <button class="left-button" id="black">light-black</button>
+            <span id="left-span">
+                <button class="left-button" id="blue"></button>
+                <button class="left-button" id="rgb"></button>
+                <button class="left-button" id="black"></button>
+            </span>
         </div>
         <div id="middle-container">
             <button id="clear">Clear</button>
