Updated stylesheet and html tags

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <button class="left-button" id="blue"></button>
                 <button class="left-button" id="rgb"></button>
                 <button class="left-button" id="black"></button>
+                <button class="left-button" id="remove"></button>
             </span>
         </div>
         <div id="middle-container">
