--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
             </span>
         </div>
         <div id="middle-container">
-            <button id="clear">Clear</button>
+            <span>
+                <button id="new">New</button>
+                <button id='clear'>Clear</button>
+            </span>
             <div id="grid-container"></div>
         </div>
         <div id="right-container"></div>
     </div>
     <footer>
-        <p>The Odin Project</p>
-        <p id="name">by Tiyo</p>
+        <p>© 2021 Vadim Kostrov, All Rights Reserved</p>
     </footer>
     <script  src='script.js' defer></script>
 </body>
