Added input button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="container">
         <div id="left-container">
             <span id="left-span">
-                <button class="left-button" id="blue"></button>
+                <input type="color" class="left-button" id="anyColour" value="#0693cf">
                 <button class="left-button" id="rgb"></button>
                 <button class="left-button" id="black"></button>
                 <button class="left-button" id="remove"></button>
